--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "formik": "^2.2.6",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "recharts": "^2.0.0-beta.2"
+    "recharts": "^2.0.0-beta.2",
+    "yup": "^0.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
