Change first page to typescript (#21)
* Add types to first page

* Fix isloggedIn bug in welcome page

* format welcome page and authenticate

* Add formating

* Fix format issues

* Add react version to eslint settings

* Fix lint script in package.json

* Add husky and lint-staged

* Fix App formatting

* Update lint-staged command

* Add missing semi-colon

* Update husky config

* Add husky to package.json

* Downgrade husky to version 4

* Remove husky 5 configs

* Update lint-staged path

* Add husky

Co-authored-by: Edwin P. Magezi <edwinm_p@yahoo.com>

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,20 +1,26 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "@typescript-eslint",
-      "prettier"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended"
-    ],
-    "rules": {
-      "prettier/prettier": "error"
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "rules": {
+    "prettier/prettier": "error",
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": "off",
+    "react/prop-types": 0
+  },
+  "settings": {
+    "react": {
+      "version": "detect" // Tells eslint-plugin-react to automatically detect the version of React to use
     }
-
-
   }
+}
