--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "npx eslint 'src/**/*.{ts,tsx}' --quiet && tsc --noEmit"
+    "lint": "eslint 'src/**/*.{ts,tsx}' --quiet && tsc --noEmit"
   },
   "eslintConfig": {
     "extends": [
